# ZeroDraft

./: Cargo.toml  README.md  ROADMAP.md  SKILL.md  deny.toml  mcp.json
.github/workflows/: ci.yml  platform-bundles.yml  release-packaging.yml
distribution/templates/: platform-package-mcp.template.json
docs/: AGENT_COMMENT_WORKFLOW.md
scripts/: build_platform_bundle.py
src/: doctor.rs  init.rs  lib.rs  main.rs  mcp.rs  schema.rs
